--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,5 +6,6 @@ service:
     routes:
     - route: tag
       price: 1000
-    - route: color
-      price: 1000
+    - route: colorify
+      destination: color
+      price: 500
