Fixed stand alone dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,11 @@ WORKDIR /usr/src/
 RUN apt-get update
 RUN apt-get -y install wget zip
 RUN wget "https://github.com/pennyfx/21-payable-proxy/archive/master.zip"
-RUN unzip master.zip -d /usr/src/app/
+RUN unzip master.zip -d /usr/src/
+RUN ls /usr/src/21-payable-proxy-master/
+RUN pip install --no-cache-dir -r /usr/src/21-payable-proxy-master/requirements.txt
+
+WORKDIR /usr/src/21-payable-proxy-master/
 
 ENV CONFIG_DIR "/config/"
 
@@ -15,4 +19,4 @@ VOLUME /root/.two1/
 
 EXPOSE 5000
 
-CMD ["python",".app/two1proxy.py"]
+CMD ["python","./two1proxy.py"]
